hard-gists/a8332d2b6dc517accedbff8fd8e63b08/run.log
=== Docker Run Log for a8332d2b6dc517accedbff8fd8e63b08 ===
Started at: Mi 29. Okt 19:07:56 CET 2025

[2025-10-29 19:07:57] START: Running container for a8332d2b6dc517accedbff8fd8e63b08
[2025-10-29 19:07:57] SUCCESS: Container a2cc5eca4c0419c8e6c91dfe71d2cd8cf6b7a94d2d5ae214b6bac1716bf20c30 started for a8332d2b6dc517accedbff8fd8e63b08
=== Container logs for a8332d2b6dc517accedbff8fd8e63b08 ===
  File "/snippet.py", line 29
    print "Created YAML file {0}".format(yaml_file)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a8332d2b6dc517accedbff8fd8e63b08 ===
[2025-10-29 19:07:59] INFO: Container a2cc5eca4c0419c8e6c91dfe71d2cd8cf6b7a94d2d5ae214b6bac1716bf20c30 has stopped
